# cli-wordly

./: .gitignore  LICENSE  README.md  pyproject.toml  wordly
data/: five_letters
src/wordly_cli/: __main__.py  wordly.py
