[project]
name = "wordly_cli"
version = "0.0.2"
authors = [
  { name="Alex Artamonov", email="alex.artamonov2010@gmail.com" },
]
description = "My rendition of the Wordle game for command line"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["colorama==0.4.6",]

keywords = ["python", "games", "wordle", "english", "word games", "command line games"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
"Homepage" = "https://github.com/alex-artamonov/cli-wordly"
"Bug tracker" = "https://github.com/alex-artamonov/cli-wordly/issues"